# aristoteles

./: .gitignore  README.md
Aplicacao/VoterAuthenticationAPI/: Dockerfile  VoterAuthenticationAPI.csproj  VoterAuthenticationAPI.sln  package-lock.json
Aplicacao/VoterAuthenticationAPI/Common/: Utils.cs
Aplicacao/VoterAuthenticationAPI/Data/: DataContext.cs
Aplicacao/VoterAuthenticationAPI/Migrations/: 20240520210635_Init.cs
Aplicacao/VoterAuthenticationAPI/Models/: User.cs
Aplicacao/VoterAuthenticationAPI/Properties/: launchSettings.json
app/Telas/Cadastro/: Cadastro.html  styleCadastro.css
app/Telas/Votacoes/: Votacoes.html  (+2 more)
app/VoterAuthenticationAPI/: Program.cs
app/blockchain/: Cargo.toml  README.md
atividades/: 26-04-2024 - Sincronização em JS.md
atividades/08-07-2024 - gRPC/: README.md  docker-compose.yaml  requirements.txt
atividades/08-07-2024 - gRPC/server/: pyproject.toml
atividades/08-07-2024 - gRPC/server/protos/: users.proto
atividades/08-07-2024 - gRPC/server/server/: main.py  seed.py  users_pb2.py  users_pb2.pyi  users_pb2_grpc.py
docs/Atividades/: 05-04-2023 - Concorrência de threads.rar  18-06-2024 - Produtor Consumidor hosts diferentes.py  26-06-2024 - Problema Escritor-Leitor.cs
docs/Diagramas/: Diagrama BPM.png:Zone.Identifier  Diagrama UML.png:Zone.Identifier
src/: Dockerfile.telas  docker-compose.yml
src/deploy/: Dockerfile.api  docker-compose.yml
src/voter_authentication_api/: Dockerfile  Program.cs  VoterAuthenticationAPI.csproj  VoterAuthenticationAPI.http  VoterAuthenticationAPI.sln  appsettings.json
(+98 files in other folders)
