[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["TheLastAurora <vitoribeiro0024@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
grpcio-tools = "^1.64.1"
sqlalchemy = "^2.0.31"
grpcio = "^1.64.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
